--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -31,6 +31,7 @@
         cursor: pointer;
         img {
             height: 50px;
+            border-radius: 55%;
         }
     }
     .menuItems {
