--- a/src/pages/home/heroBanner/style.scss
+++ b/src/pages/home/heroBanner/style.scss
@@ -52,7 +52,7 @@
         margin: 0 auto;
         .title {
             font-size: 50px;
-            text-shadow: 4cm;
+            padding: 100px;
             font-weight: 700;
             margin-bottom: 10px;
             @include md {
